--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container" >
+        <div id="cabezera">
+            <h1>Cabezera</h1>
+        </div>
         <div id="post" >
             <h1>Este es el título atractivo e interesante del post</h1>
             <P>y este es el parrafo de inicio donde vamos a explicar las cosas increibles</P>
