--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container" >
         <div id="cabezera">
-            <h1>Cabezera</h1>
+            HyperBlog
+            <span id="tagline">Tu Blog de confianza</span>
         </div>
         <div id="post" >
             <h1>Este es el título atractivo e interesante del post</h1>
