--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
     <div id="container" >
         <div id="cabezera">
             HyperBlog
-            <span id="tagline">Tu Blog de confianza</span>
+            <span id="tagline">Tu Blog maestro</span>
         </div>
         <div id="post" >
             <h1>Este es el título atractivo e interesante del post</h1>
             <P>y este es el parrafo de inicio donde vamos a explicar las cosas increibles</P>
             <p>Los blogs son la mejor forma de compartir informacion y tus idea. Mucho mas que ir a conferencias o salir en Youtube.<br> Excepto si eres un RockStar, Pero estadisticamente no lo eres .... por ahora</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
     
